fixed the issue of books being weirdly aligned on mobile

--- a/styles/bookshelf.css
+++ b/styles/bookshelf.css
@@ -131,12 +131,12 @@
   
   .bookshelf {
     display: flex;
-    justify-content: flex-start; /* Aligns books to the left */
+    justify-content: center; /* Aligns books to the left */
     align-items: flex-end; 
     flex-wrap: nowrap; 
     padding: 0;
     margin-bottom: -15px;
-    margin-left: 37%; /* Shift the starting position of the books (this seems to be about center?) */
+   
     
   }
   .book {
